sign up api and db completed

--- a/readme.cd
+++ b/readme.cd
@@ -1,3 +1,6 @@
+FRONTEND
+--------
+
 npm create vite@latest notes-app
 npm run dev
 npm i react-router-dom
@@ -13,3 +16,20 @@ npm i react-icons
 npm install lucide-react
 
 npm i react-modal
+
+
+=========================================================================================================
+
+BACKEND
+--------
+npm init
+
+npm i express nodemon mongoose jsonwebtoken cors dotenv 
+
+
+npm install mongodb
+
+mongodb => User : testuser , Pass:   testuser@123
+
+To generate access token:
+node -e "console.log(require('crypto').randomBytes(64).toString('hex'))"
