Login setup completed

--- a/readme.cd
+++ b/readme.cd
@@ -17,6 +17,7 @@ npm install lucide-react
 
 npm i react-modal
 
+npm i axios
 
 =========================================================================================================
 
