login,signup, get notes, get user info

--- a/readme.cd
+++ b/readme.cd
@@ -19,6 +19,8 @@ npm i react-modal
 
 npm i axios
 
+npm i moment
+
 =========================================================================================================
 
 BACKEND
