--- a/readme.cd
+++ b/readme.cd
@@ -36,3 +36,12 @@ mongodb => User : testuser , Pass:   testuser@123
 
 To generate access token:
 node -e "console.log(require('crypto').randomBytes(64).toString('hex'))"
+
+
+
+
+
+=========================================================================================================
+
+env:
+ ACCESS_TOKEN_SECRET
